# RealTimeICNET

./: CMakeLists.txt  README.md  VideoCapture.kdev4
lib/: CMakeLists.txt  classifier.cpp  classifier.h
src/: CMakeLists.txt  main.cpp  prefix.hpp
